--- a/css/style.css
+++ b/css/style.css
@@ -866,7 +866,7 @@ ul.footer-grid-list li span{
 /*-- //to-top --*/
 /*-- banner1 --*/
 .banner1{
-	background: url(../images/header-ocean.jpg) no-repeat 0px 0px;
+	background: url(../images/orange-succulents.jpeg) no-repeat 0px 0px;
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
